# ova4gar

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.py  run_alphapose.sh  server - 10.255.105.25_p10181.html
config/: config.yaml  demo_config.yaml  group.yaml  individual.yaml  keypoint.yaml
config/attention/: object_point.yaml
config/higher-hrnet/: w32_512_adam_lr1e-3.yaml  w32_640_adam_lr1e-3.yaml  w48_640_adam_lr1e-3.yaml
config/hrnet/: w32_256x192.yaml  w32_256x192.yml  w32_384x288.yaml  w32_384x288.yml  w48_256x192.yaml  w48_384x288.yaml
config/individual/: individual.yaml
config/occlusion/: keypoints_occlusion.yaml
config/passing/: pass_model_lstm.yaml  pass_model_lstm_ep20.yaml  pass_model_lstm_ep30.yaml  pass_model_lstm_ep50.yaml  pass_model_lstm_f1_ep100.yaml  pass_model_lstm_f1_ep120.yaml  pass_model_lstm_f1_ep150.yaml  pass_model_lstm_f1_ep30.yaml  pass_model_lstm_f1_ep50.yaml  pass_model_lstm_f1_ep75.yaml  pass_model_lstm_new.yaml  pass_model_lstm_recall.yaml  (+7 more)
demo/: demo_file.py  demo_surgery.py  demo_surgery_passing.py  demo_visualize.py
model/: keypoints_occlusion.pth  pass_model_lstm.pth  pass_model_svm.pickle
module/: attention.py  img_test.py  passing.py  run.py  set_homo.py
notebook/: YOLOv3_test.ipynb  analyse_keypoint.ipynb  deepsort_test.ipynb  opencv_kcf_test.ipynb  openpose_test.ipynb  tf-pose-estimation_test.ipynb
notebooks/: alphapose-cuda0.ipynb  alphapose-win.ipynb  alphapose_colab.ipynb  alphapose_test.ipynb  analyse_keypoint.ipynb  attention_result.ipynb  camera_calibration.ipynb  crop_video.ipynb  opencv_kcf_test.ipynb  passing_result.ipynb  run.ipynb  set_homography.ipynb
python/: basketball.py  basketball_backup.py  demo.py  img_test.py  sports.py
requirements/: alphapose-requirements.txt  hrnet-requirements.txt  requirements-dev.txt  requirements.txt
script/: start_tf_pose.sh  start_tf_pose_google_colab.sh
src/: attention.py  demo.py  demo_file.py  passing.py  run.py  set_homo.py  valid.py
src_backup/: attention.py  passing.py  run.py  set_homo.py
tools/: calc_attention_score.py  crop_attention.py  crop_attention_random.py  crop_passing.py  delete_timebar.py  delete_timebar_json.py  train_passing.py
(+273 files in other folders)
