[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["kojikojiprg <kojikoji.prg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
opencv-python = "^4.2.0"
opencv-contrib-python = "^4.2.0"
scipy = "^1.5.0"
scikit-learn = "^0.23.2"
seaborn = "^0.11.1"
openpyxl = "^3.0.7"
xlrd = "^2.0.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.0.15"
jupyterlab-vim = "^0.14.2"
ipympl = "^0.7.0"
rope = "^0.17.0"
flake8 = "^3.8.2"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
