[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Koji Yokoyama"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.3"
scipy = "^1.8.0"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
tqdm = "^4.64.0"
opencv-python = "^4.5.5"
scikit-learn = "^1.0.2"
scikit-image = "^0.19.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
Cython = "^3.0.0.a10"
easydict = "1.7"
PyYAML = "^6.0"
json-tricks = "^3.15.5"
yacs = "^0.1.8"
cffi = "^1.15.0"
munkres = "^1.1.4"
tensorboardX = "^2.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
